--- a/battleshipServer/static/stylesheets/main.css
+++ b/battleshipServer/static/stylesheets/main.css
@@ -13,6 +13,7 @@
 .header {
   padding: 20px;
   box-shadow: 0 0 10px #0002;
+  position: relative;
 }
 .header h1 {
   text-align: center;
@@ -31,4 +32,29 @@
   border-radius: 5px;
   cursor: pointer;
   outline: none;
+}
+.modal-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: #0004;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+.modal {
+  padding: 50px;
+  background-color: #fff;
+  border-radius: 20px;
+  text-align: center;
+}
+.modal h3 {
+  font-size: 42px;
+  margin-bottom: 16px;
+}
+.modal p {
+  font-size: 20px;
+  margin-bottom: 8px;
 }
