--- a/battleshipServer/templates/server/game.html
+++ b/battleshipServer/templates/server/game.html
@@ -54,6 +54,7 @@
   <div class="modal-wrapper">
     <div class="modal"></div>
   </div>
+  <div id="gamelog"></div>
   <script type="module" src="{% static "scripts/main.js" %}"></script>
 </body>
 </html>
