battle stats window started, numbers and characters done

--- a/battleshipServer/templates/server/game.html
+++ b/battleshipServer/templates/server/game.html
@@ -47,6 +47,10 @@
       <div class="wrapper">
         <div class="field-window">
           <h4>Battle stats</h4>
+          <h5>Player losses:</h5>
+          <div id="playerlosses">-</div>
+          <h5>Opponent losses:</h5>
+          <div id="opponentlosses">-</div>
         </div>
       </div>
     </div>
