--- a/battleshipServer/templates/server/game.html
+++ b/battleshipServer/templates/server/game.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BattleShip</title>
   {% load static %}
+  <link rel="stylesheet" href="{% static "stylesheets/light_theme.css" %}">
   <link rel="stylesheet" href="{% static "stylesheets/main.css" %}">
   <link rel="stylesheet" href="{% static "stylesheets/game.css" %}">
   <link rel="shortcut icon" href="{% static "images/BattleShip-icon.png" %}" type="image/x-icon">
