--- a/battleshipServer/static/stylesheets/game.css
+++ b/battleshipServer/static/stylesheets/game.css
@@ -15,7 +15,7 @@
   padding: 5px;
   justify-content: center;
   align-items: center;
-  background-color: #3D518C;
+  background-color: var(--btn-color);
   border-radius: 4px;
   margin: 20px 10px;
 }
@@ -72,7 +72,7 @@
   margin-top: 42px;
   height: 430px;
   width: 200px;
-  background-color: #fff;
+  background-color: var(--main-color);
   box-shadow: 0 0 10px #0002;
   position: relative;
   transition: .3s;
@@ -103,7 +103,7 @@
   background-color: #FFB74D;
   border-radius: 5px;
   border: 2px solid #FF9800;
-  color: #fff;
+  color: var(--main-color);
   font-size: 18px;
   cursor: pointer;
   padding: 12px;
@@ -113,8 +113,8 @@
 .ship-menu button.reset {
   margin-bottom: 10px;
   background-color: #0001;
-  color: #091540;
-  border-color: #091540;
+  color: var(--secondary-color);
+  border-color: var(--secondary-color);
 }
 #network-params {
   position: absolute;
@@ -139,7 +139,7 @@
 }
 #connection .status::before, #connection .status::after {
   content: '';
-  background-color: #fff;
+  background-color: var(--main-color);
   position: absolute;
 }
 #connection .status.ok {
