adding themes in progress

--- a/battleshipServer/templates/server/index.html
+++ b/battleshipServer/templates/server/index.html
@@ -20,6 +20,7 @@
       <div class="tab">
         <button class="tablinks active" data-target="Search" data-openDefault>Search</button>
         <button class="tablinks" data-target="Create">Create</button>
+        <!-- <button class="tablinks" data-target="Settings">Settings</button> -->
       </div>
       <div id="Search" class="tabcontent">
         <form id="search-form">
@@ -51,6 +52,18 @@
           </label>
           <input type="submit" value="Create" class="styled-btn">
         </form>
+      </div>
+
+      <div id="Settings" class="tabcontent">
+        <h3>Theme</h3>
+        <div class="theme-block">
+          <span>Light</span>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider"></span>
+          </label>
+          <span>Dark</span>
+        </div>
       </div>
     </div>
   <div class="modal-wrapper">
