--- a/battleshipServer/static/stylesheets/menu.css
+++ b/battleshipServer/static/stylesheets/menu.css
@@ -167,3 +167,56 @@ form input[type=submit] {
 .opened-room-list .room .styled-btn {
   margin: 0;
 }
+.theme-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 12px;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 28px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-transition: .3s;
+  transition: .3s;
+  border-radius: 28px;
+  border: 1px var(--btn-color) solid;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 3px;
+  background-color: var(--btn-color);
+  -webkit-transition: .3s;
+  transition: .3s;
+  border-radius: 50%;
+}
+input:checked + .slider {
+  background-color: var(--btn-color);
+}
+input:focus + .slider {
+  box-shadow: 0 0 1px var(--btn-color);
+}
+input:checked + .slider:before {
+  -webkit-transform: translateX(30px);
+  -ms-transform: translateX(30px);
+  transform: translateX(30px);
+  background-color: white;
+}
