theme setting done

--- a/battleshipServer/static/stylesheets/dark_theme.css
+++ b/battleshipServer/static/stylesheets/dark_theme.css
@@ -2,4 +2,6 @@
   --main-color: #091540;
   --secondary-color: #fff;
   --btn-color: #3D518C;
+  --logs-background-color: #d6d6d6;
+  --brightness: .75;
 }
