--- a/battleshipServer/static/stylesheets/light_theme.css
+++ b/battleshipServer/static/stylesheets/light_theme.css
@@ -2,4 +2,6 @@
   --main-color: #fff;
   --secondary-color: #091540;
   --btn-color: #3D518C;
+  --logs-background-color: #fff;
+  --brightness: 1;
 }
