--- a/battleshipServer/templates/server/index.html
+++ b/battleshipServer/templates/server/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BattleShip - Lobby</title>
   {% load static %}
-  <link rel="stylesheet" href="{% static "stylesheets/light_theme.css" %}">
+  <link rel="stylesheet" href="{% static "stylesheets/light_theme.css" %}" id="current-theme">
   <link rel="stylesheet" href="{% static "stylesheets/main.css" %}">
   <link rel="stylesheet" href="{% static "stylesheets/menu.css" %}">
   <link rel="shortcut icon" href="{% static "images/BattleShip-icon.png" %}" type="image/x-icon">
@@ -20,7 +20,7 @@
       <div class="tab">
         <button class="tablinks active" data-target="Search" data-openDefault>Search</button>
         <button class="tablinks" data-target="Create">Create</button>
-        <!-- <button class="tablinks" data-target="Settings">Settings</button> -->
+        <button class="tablinks" data-target="Settings">Settings</button>
       </div>
       <div id="Search" class="tabcontent">
         <form id="search-form">
@@ -59,7 +59,7 @@
         <div class="theme-block">
           <span>Light</span>
           <label class="switch">
-            <input type="checkbox">
+            <input type="checkbox" id="theme-switcher">
             <span class="slider"></span>
           </label>
           <span>Dark</span>
