--- a/battleship-react/src/index.css
+++ b/battleship-react/src/index.css
@@ -6,7 +6,9 @@
   
   --btn-color: #3D518C;
   --logs-background-color: #fff;
-  
+
+  --error-color: #e53935;
+
   --shadow-color: #0004;
 
   --brightness: 1;
