--- a/battleship-react/src/Components/GameField/GameField.css
+++ b/battleship-react/src/Components/GameField/GameField.css
@@ -5,30 +5,33 @@
 }
 
 .game-field {
+  --field-size: 24rem;
+
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
-  grid-gap: 0.2rem;
+  grid-gap: 0.1rem;
 
-  width: 24rem;
-  height: 24rem;
+  width: var(--field-size);
+  height: var(--field-size);
 
   padding: 0.5rem;
   background-color: var(--field-color);
 
   border-radius: 3px;
+
+  transition: 0.3s;
 }
 
 .game-field-cell {
   position: relative;
   cursor: pointer;
 
-  background-color: var(--shadow-color);
   border-radius: 3px;
 
   text-align: center;
 
-  transition: 0.3s;
+  transition: 0.1s;
 }
 
 .game-field-cell.empty {
