--- a/battleship-react/src/Containers/Game/Game.css
+++ b/battleship-react/src/Containers/Game/Game.css
@@ -2,11 +2,47 @@
   display: flex;
   justify-content: center;
 
-  max-width: 1200px;
+  max-width: 1360px;
   width: 100%;
-  margin: 0 auto;
+  margin: 5% auto;
 }
 
 .game-container > div {
-  margin: 1rem;
+  margin: 0 1rem;
+}
+
+.game-container .game-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  width: 100%;
+  margin-top: 3rem;
+  padding: 1rem 0.5rem;
+  box-shadow: 0 0 4px var(--shadow-color);
+
+  border-radius: 3px;
+}
+
+.game-container .game-panel h3 {
+  text-align: center;
+}
+
+.game-container .game-panel ul li {
+  cursor: pointer;
+  list-style: none;
+
+  margin: 0.6rem;
+
+  text-align: center;
+
+  transition: 0.3s;
+}
+
+.game-container .game-panel ul li:hover {
+  opacity: 0.7;
+}
+
+.game-container .game-panel ul li.active {
+  text-decoration: underline 2px;
 }
