--- a/battleship-react/src/Components/OpenedRooms/OpenedRooms.css
+++ b/battleship-react/src/Components/OpenedRooms/OpenedRooms.css
@@ -2,7 +2,8 @@
   position: relative;
 }
 
-.reload-circle {
+.reload {
+  overflow: hidden;
   user-select: none;
   cursor: pointer;
 
@@ -10,5 +11,44 @@
   top: 50%;
   right: 0.7rem;
 
+  padding: 0.5rem;
+  background-color: transparent;
+  border: 2px var(--secondary-color) solid;
+  border-radius: 3px;
+
+  font-size: 1rem;
+  font-weight: bold;
+
   transform: translateY(-50%);
+  transition: 0.3s;
+}
+
+.reload::after {
+  content: '';
+  opacity: 0;
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+
+  width: 120%;
+  height: 120%;
+
+  background-color: var(--secondary-color);
+
+  transform: translate(-50%, -50%);
+  transition: 0.3s;
+}
+
+.reload:active::after {
+  opacity: 1;
+
+  width: 0;
+  height: 0;
+
+  transition: 0s;
+}
+
+.reload:focus {
+  box-shadow: 0 0 5px var(--secondary-color);
 }
